testdata/baselines/reference/compiler/tluaRequirePathShaped.errors.txt
main.tlua(1,19): error TS2307: Cannot find module './m' or its corresponding type declarations.
main.tlua(2,19): error TS2307: Cannot find module '../up' or its corresponding type declarations.
main.tlua(3,19): error TS2307: Cannot find module 'dir/m' or its corresponding type declarations.


==== main.tlua (3 errors) ====
    local a = require("./m");
                      ~~~~~
!!! error TS2307: Cannot find module './m' or its corresponding type declarations.
    local b = require("../up");
                      ~~~~~~~
!!! error TS2307: Cannot find module '../up' or its corresponding type declarations.
    local c = require("dir/m");
                      ~~~~~~~
!!! error TS2307: Cannot find module 'dir/m' or its corresponding type declarations.
    local ok = require("m");
    ok;
    
==== m.tlua (0 errors) ====
    local x = 1;
    return { x = x };
    